# finance-tracker

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260505_01_create_transactions.py
app/: __init__.py  config.py  db.py  main.py
app/api/: router.py
app/api/routes/: reports.py  transactions.py
app/models/: __init__.py  transaction.py
app/schemas/: __init__.py  transaction.py
app/services/: transactions.py
tests/: test_transactions_api.py
