[project]
name = "finance-tracker"
version = "0.1.0"
description = "A FastAPI finance tracker starter project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.121.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
